@@ -2,12 +2,14 @@
 
 * 0.1.3    UNRELEASED
 
++ Add command-line flag to embed the SVG in HTML (#82, #81)
+
 * 0.1.2    2025-03-22
 
 + Add example: git internals (#64, #79)
   + Show standalone blons and trees
   + Add CSS and JS for displaying SVGs in the docs
-+ Add py.typed file
++ Add py.typed file (#74)
 
 ** Bugfixes
 
